Update openstack-doc-tools to 1.8.0
Depends-on: I065006dbda8311c53d60ed8f062ac28c761b2fc8
Change-Id: Ie196dde4292f89720df72478b96d3ffeba10a71b

--- a/openstack/openstack-doc-tools/openstack-doc-tools.spec.j2
+++ b/openstack/openstack-doc-tools/openstack-doc-tools.spec.j2
@@ -1,7 +1,7 @@
 %global sname openstack-doc-tools
 %global module os_doc_tools
 Name:           {{ py2name('openstack-doc-tools') }}
-Version:        1.5.0
+Version:        1.8.0
 Release:        0
 Summary:        OpenStack Docs Tools
 License:        {{ license('Apache-2.0') }}
@@ -14,17 +14,17 @@ BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('demjson') }}
 BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('lxml') }}
 BuildRequires:  {{ py2pkg('mock') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
 Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('Sphinx') }}
-Requires:       {{ py2pkg('cliff-tablib') }}
 Requires:       {{ py2pkg('iso8601') }}
 Requires:       {{ py2pkg('lxml') }}
-Requires:       {{ py2pkg('oslosphinx') }}
+Requires:       {{ py2pkg('openstackdocstheme') }}
 BuildArch:      noarch
 
 %description
@@ -33,6 +33,7 @@ Tools used by the OpenStack Documentation Project.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
@@ -41,6 +42,8 @@ Tools used by the OpenStack Documentation Project.
 %py2_install
 
 %check
+# We don't want to run the sitemap tests, it is not included in the package
+rm -f test/test_sitemap_file.py test/test_pipelines.py
 %{__python2} setup.py testr
 
 %files
@@ -48,12 +51,9 @@ Tools used by the OpenStack Documentation Project.
 %doc README.rst
 %{_bindir}/doc-tools-build-rst
 %{_bindir}/doc-tools-check-languages
-%{_bindir}/doc-tools-update-cli-reference
-%{_bindir}/openstack-auto-commands
 %{_bindir}/openstack-indexpage
 %{_bindir}/openstack-jsoncheck
 %{python2_sitelib}/%{module}
-%{python2_sitelib}/autogenerate_config_docs
 %{_datadir}/%{sname}
 %{python2_sitelib}/*.egg-info
 
