Update cliff to 2.11.0
Change-Id: Ibbf24014cbd652fd63b96398757c21bd82250837
Depends-on: I968845a5cb323178a449bb3efdb048f780e42672

--- a/openstack/cliff/cliff.spec.j2
+++ b/openstack/cliff/cliff.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'cliff' %}
-{% set upstream_version = upstream_version('2.10.0') %}
+{% set upstream_version = upstream_version('2.11.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -24,15 +24,17 @@ BuildRequires:  {{ py2pkg('stevedore', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('unicodecsv', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('unicodecsv', py_versions=['py2']) }}
 Requires:       {{ py2pkg('PrettyTable') }}
 Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('cmd2') }}
 Requires:       {{ py2pkg('pyparsing') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
-Requires:       {{ py2pkg('unicodecsv') }}
 BuildArch:      noarch
+%ifpython2
+Requires:       {{ py2pkg('unicodecsv') }}
+%endif
 %python_subpackages
 
 %description
