monasca-agent: Add dependeny on python-futures
monasca-collector (part of python-monasca-agent) need python-futures.

Change-Id: Ie1d428257173f21dcde29b3688d6c489a94e1b44

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -80,6 +80,7 @@ sending them to the Monasca API.
 Summary:        Python module for monasca-agent
 Group:          Development/Languages/Python
 Requires:       {{ py2pkg('PyYAML') }}
+Requires:       {{ py2pkg('futures') }}
 Requires:       {{ py2pkg('gevent') }}
 Requires:       {{ py2pkg('httplib2') }}
 Requires:       {{ py2pkg('python-monascaclient') }}
