Clean up dependencies (keystone, tripleo-common)
Dependency was renamed on pypi from msgpack-python to msgpack,
and keystone switched to the new name for Queens.

Also, tripleo-common migrated from gitdb to GitPython, adjust
dependencies accordingly as they started to cause conflicts.

Change-Id: I97ddf5333f22bfd7ebcbfdfa130b328d7c077cf9

--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -75,7 +75,7 @@ Requires:       {{ py2pkg('jsonschema') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
 Requires:       {{ py2pkg('keystonemiddleware') }}
 Requires:       {{ py2pkg('ldappool') }}
-Requires:       {{ py2pkg('msgpack-python') }}
+Requires:       {{ py2pkg('msgpack') }}
 Requires:       {{ py2pkg('oauthlib') }}
 Requires:       {{ py2pkg('oslo.cache') }}
 Requires:       {{ py2pkg('oslo.concurrency') }}
@@ -121,7 +121,7 @@ BuildRequires:  {{ py2pkg('dogpile.cache') }}
 BuildRequires:  {{ py2pkg('jsonschema') }}
 BuildRequires:  {{ py2pkg('keystonemiddleware') }}
 BuildRequires:  {{ py2pkg('ldappool') }}
-BuildRequires:  {{ py2pkg('msgpack-python') }}
+BuildRequires:  {{ py2pkg('msgpack') }}
 BuildRequires:  {{ py2pkg('oauthlib') }}
 BuildRequires:  {{ py2pkg('oslo.concurrency') }}
 BuildRequires:  {{ py2pkg('oslo.db') }}
