--- a/openstack/pycadf/pycadf.spec.j2
+++ b/openstack/pycadf/pycadf.spec.j2
@@ -1,6 +1,6 @@
 %global sname pycadf
 Name:           python-%{sname}
-Version:        2.6.0
+Version:        2.7.0
 Release:        0
 Summary:        DMTF Cloud Audit (CADF) data model
 License:        {{ license('Apache-2.0') }}
@@ -9,15 +9,14 @@ URL:            https://launchpad.net/pycadf
 Source0:        https://files.pythonhosted.org/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('fixtures') }}
+BuildRequires:  {{ py2pkg('oslo.config') }}
+BuildRequires:  {{ py2pkg('oslo.serialization') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
-Requires:       {{ py2pkg('Babel') }}
-Requires:       {{ py2pkg('WebOb') }}
 Requires:       {{ py2pkg('debtcollector') }}
-Requires:       {{ py2pkg('iso8601') }}
-Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('oslo.config') }}
-Requires:       {{ py2pkg('oslo.messaging') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('pytz') }}
 Requires:       {{ py2pkg('six') }}
@@ -29,13 +28,14 @@ DMTF Cloud Audit (CADF) data model
 %package doc
 Summary:        Documentation for the DMTF Cloud Audit (CADF) data model
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the DMTF Cloud Audit (CADF) data model.
 
 %prep
 %autosetup -n %{sname}-%{version}
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %py_req_cleanup
 
 %build
