--- a/openstack/reno/reno.spec.j2
+++ b/openstack/reno/reno.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'reno' %}
-{% set upstream_version = upstream_version('2.6.0') %}
+{% set upstream_version = upstream_version('2.7.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -13,8 +13,9 @@ URL:            http://www.openstack.org/
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('Babel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('PyYAML', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('Sphinx', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('docutils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('dulwich', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
@@ -22,8 +23,9 @@ BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
-Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PyYAML') }}
+Requires:       {{ py2pkg('Sphinx') }}
+Requires:       {{ py2pkg('docutils') }}
 Requires:       {{ py2pkg('dulwich') }}
 BuildArch:      noarch
 %if 0%{?suse_version}
